--- a/css/styles-6.css
+++ b/css/styles-6.css
@@ -346,6 +346,14 @@ nav {
     transform: translateY(20px);
   }
 }
+@media screen and (max-width: 768px) {
+  .hero-image{
+    text-align: center;
+  }
+  .hero-image img{
+    width: 100%;
+  }
+}
 /*-----------------------------------------
 4. Brends
 -------------------------------------------*/
@@ -367,24 +375,81 @@ nav {
 .softwar-img{
   text-align: right;
 }
+@media screen and (max-width: 768px) {
+  .softwar-img{
+    text-align: center;
+  }
+}
 /*-----------------------------------------
 6. Counts
 -------------------------------------------*/
-
-
+#count{
+  padding: 50px 0;
+}
+.box-shad{
+  box-shadow: 0px 8px 10px rgba(247, 247, 247, 0.79);
+}
+.count-item h3{
+  font-style: normal;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 40px;
+  text-align: center;
+  letter-spacing: 0.05em;
+  color: #000000;
+}
+.count-item h3 i{
+  color: #1192EE;
+}
+.count-item p{
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 16px;
+  text-align: center;
+  letter-spacing: 0.05em;
+  color: rgba(0, 44, 91, 0.3);
+}
 
 /*-----------------------------------------
 7. About us
 -------------------------------------------*/
-
-
-
+#about{
+  padding: 80px 0;
+  background: #E8F5FE;
+}
+@media screen and (max-width: 768px) {
+  .about-info{
+    margin-top: 40px;
+  }
+}
 /*-----------------------------------------
 8. Start tabs
 -------------------------------------------*/
-
-
-
+#start-tabs{
+  padding: 80px 0;
+}
+.start-title{
+  text-align: center;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 32px;
+  letter-spacing: 0.02em;
+  color: #002C5B;
+}
+.start-title span{
+  color: #1192EE;
+}
+.start-sub{
+  text-align: center;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.05em;
+  color: #8A97A5;
+}
 /*-----------------------------------------
 9. Demo
 -------------------------------------------*/
