--- a/css/styles.css
+++ b/css/styles.css
@@ -494,7 +494,39 @@ nav {
     left: 10%;
   }
 }
+@media screen and (max-width: 500px) {
+  #innovative {
+    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
 
+  .bg-big {
+    width: 350px;
+    height: 350px;
+  }
+
+  .bg-medium {
+    width: 220px;
+    height: 220px;
+  }
+
+  .bg-smoll {
+    width: 54px;
+    height: 54px;
+  }
+
+  .bg-medium img {
+    position: absolute;
+    top: 70%;
+    left: 10%;
+  }
+  .bg-smoll img {
+    position: absolute;
+    right: -200%;
+    top: 5%;
+  }
+}
 /*-----------------------------------------
 6. Services
 -------------------------------------------*/
