--- a/css/styles-3.css
+++ b/css/styles-3.css
@@ -574,6 +574,9 @@ form.contact-form {
   padding-bottom: 40px;
   margin-top: 60px;
 }
+.myrow{
+margin: 0 !important;
+}
 
 .port-ite {
   height: 280px;
