--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ TABLE OF CONTENT
   line-height: 24px;
   letter-spacing: 0.055em;
   color: #000000;
-  transition: all 1s;
+  transition: all 0.3s;
   margin-bottom: 40px;
 }
 
@@ -119,7 +119,7 @@ TABLE OF CONTENT
   color: #fff;
   background-color: #000;
   border: 1px solid #fff;
-  transition: all 1s;
+  transition: all 0.3s;
 }
 
 /*-----------------------------------------
@@ -404,6 +404,7 @@ nav {
 
 .innvlist li {
   margin-bottom: 10px;
+  text-align: left;
 }
 
 .innvlist li i {
@@ -527,6 +528,36 @@ nav {
     top: 5%;
   }
 }
+
+@media screen and (max-width: 400px) {
+
+  .bg-big {
+    width: 300px;
+    height: 300px;
+  }
+
+  .bg-medium {
+    width: 170px;
+    height: 170px;
+  }
+
+  .bg-smoll {
+    width: 54px;
+    height: 54px;
+  }
+
+  .bg-medium img {
+    position: absolute;
+    top: 70%;
+    left: 10%;
+  }
+  .bg-smoll img {
+    position: absolute;
+    right: -200%;
+    top: 5%;
+  }
+}
+
 /*-----------------------------------------
 6. Services
 -------------------------------------------*/
@@ -758,7 +789,7 @@ nav {
 
 .port-ite:hover .overlay-portfolio {
   opacity: 1;
-  transition: all 1s;
+  transition: all 0.3s;
 }
 
 .overlay-portfolio {
@@ -770,10 +801,10 @@ nav {
   justify-content: center;
   flex-direction: column;
   opacity: 0;
-  transition: all 1s;
+  transition: all 0.3s;
 }
 
-.overlay-portfolio h3 {
+.overlay-portfolio a {
   font-style: normal;
   font-weight: bold;
   font-size: 20px;
@@ -783,7 +814,7 @@ nav {
   position: relative;
 }
 
-.overlay-portfolio h3:before {
+.overlay-portfolio a:before {
   border-bottom: 3px solid #fff;
   width: 40%;
   content: '';
@@ -876,7 +907,7 @@ nav {
 
 .owl-item.active {
   opacity: 1 !important;
-  transition: all 1s;
+  transition: all 0.3s;
 }
 
 .reviews-name {
@@ -993,12 +1024,12 @@ nav {
 }
 
 .team-img {
-  transition: all 2s;
+  transition: all 0.3s;
 }
 
 .team-img:hover {
   filter: sepia(80%) hue-rotate(535deg) saturate(260%);
-  transition: all 2s;
+  transition: all 0.3s;
 }
 
 .team-info {
@@ -1089,6 +1120,12 @@ nav {
 
 .sendbtn:hover {
   color: #fff;
+}
+
+@media screen and (max-width: 992px) {
+  .contact-img-z1 {
+    display: none;
+  }
 }
 
 @media screen and (max-width: 768px) {
