--- a/css/styles-2.css
+++ b/css/styles-2.css
@@ -1478,9 +1478,10 @@ form.contact-form {
   font-size: 14px;
   line-height: 21px;
   letter-spacing: 0.025em;
+}
+.blog-title a{
   color: #000000;
 }
-
 .blog-item-info {
   width: 100%;
   padding-left: 25px;
