--- a/css/styles-4.css
+++ b/css/styles-4.css
@@ -1087,7 +1087,7 @@ button.owl-prev, button.owl-next {
   color: #1192EE;
 }
 
-.news-title h3 {
+.news-title{
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
