--- a/css/styles-3.css
+++ b/css/styles-3.css
@@ -39,7 +39,7 @@ TABLE OF CONTENT
 /*-----------------------------------------
 1. headings
 -------------------------------------------*/
-.home-3-title-color {
+.title-color {
   text-align: center;
   font-style: normal;
   font-weight: 900;
@@ -49,7 +49,7 @@ TABLE OF CONTENT
   color: #275CDC;
 }
 
-.home-3-title {
+.title {
   text-align: center;
   font-style: normal;
   font-weight: bold;
@@ -59,7 +59,7 @@ TABLE OF CONTENT
   color: #000000;
 }
 
-.home-3-text {
+.text-style {
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -82,7 +82,7 @@ TABLE OF CONTENT
   color: #FFFFFF;
 }
 
-.home-3-clone-title {
+.clone-title {
   font-style: normal;
   font-weight: 900;
   font-size: 30px;
@@ -92,7 +92,7 @@ TABLE OF CONTENT
   color: #000000;
 }
 
-.home-3-clone-subtitle {
+.clone-subtitle {
   text-align: center;
   font-style: normal;
   font-weight: 500;
@@ -606,7 +606,7 @@ margin: 0 !important;
   padding-bottom: 30px;
 }
 
-.overlay-portfolio a h3 {
+.overlay-portfolio  h3 a{
   font-style: normal;
   font-weight: 900;
   font-size: 14px;
@@ -616,7 +616,7 @@ margin: 0 !important;
   position: relative;
 }
 
-.overlay-portfolio h3:before {
+.overlay-portfolio h3 a:before {
   border-bottom: 3px solid #fff;
   width: 40%;
   content: '';
@@ -902,9 +902,10 @@ button.owl-next {
   font-weight: bold;
   font-size: 24px;
   line-height: 36px;
+}
+.blog-title a{
   color: #FFFFFF;
 }
-
 /*-----------------------------------------
 13. Footer
 -------------------------------------------*/
