Services pages Fixed

--- a/css/about.css
+++ b/css/about.css
@@ -223,6 +223,7 @@ nav {
     align-items: center;
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
+    z-index: 999;
   }
 
   .nav-links li {
