--- a/css/services.css
+++ b/css/services.css
@@ -13,9 +13,9 @@ TABLE OF CONTENT
 1. Headings
 2. Header
 3. Hero
-4. Services
-5. Services Tabs
-6. Info
+4. Info
+5. Services
+6. Specialize
 7. Feedback
 8. Newsletter
 9. Footer
@@ -71,6 +71,19 @@ TABLE OF CONTENT
   font-style: normal;
   font-weight: bold;
   font-size: 24px;
+  line-height: 36px;
+  letter-spacing: 0.025em;
+  color: #1192EE;
+}
+
+.fs-36 {
+  font-size: 36px;
+}
+
+.s-title-sm {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
   line-height: 36px;
   letter-spacing: 0.025em;
   color: #1192EE;
@@ -222,6 +235,7 @@ nav {
     align-items: center;
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
+    z-index: 999;
   }
 
   .nav-links li {
@@ -305,34 +319,579 @@ nav {
 .align-right {
   text-align: right;
 }
+
 /*-----------------------------------------
 4. Services
 -------------------------------------------*/
+#info {
+  padding: 100px 0;
+}
 
+.infobox {
+  padding: 35px;
+  background: #FFFFFF;
+  box-shadow: 4px 4px 20px rgba(205, 192, 192, 0.2);
+  border-radius: 20px;
+  margin-bottom: 20px;
+}
 
+.infobox h2 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  letter-spacing: 0.03em;
+  color: #000000;
+  margin-bottom: 20px;
+}
+
+.infobox p {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  letter-spacing: 0.03em;
+  color: #000000;
+}
+
+.back {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin-bottom: 50px;
+}
+
+.cl1 {
+  background: #1192EE;
+}
+
+.fcl1 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 21px;
+  color: #1192EE;
+  float: right;
+  margin-bottom: 20px;
+}
+
+.back img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-filter: brightness(0) invert(1);
+  filter: brightness(0) invert(1);
+}
+
+.infoboxlg {
+  padding: 35px;
+}
+
+.infoboxlg h4 {
+  margin-bottom: 0px;
+}
+
+.infoboxlg h2 {
+  margin-bottom: 20px;
+}
+
+.infoboxlg p {
+  margin-bottom: 20px;
+}
+
+.infoboxlg img {
+  margin: 50px 0;
+}
 
 /*-----------------------------------------
-5. Services Tabs
+5. Services
 -------------------------------------------*/
+#services {
+  padding-top: 65px;
+  padding-bottom: 120px;
+  background: #F9F9F9;
+}
 
+.serives-title h3 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 22px;
+  text-align: center;
+  line-height: 29px;
+  color: #000000;
+}
 
+.serives-title p {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #000000;
+}
+
+.services-image-1 img {
+  position: relative;
+  left: 0;
+  top: 0;
+  z-index: 1;
+}
+
+.services-image-2 img {
+  position: absolute;
+  right: 40px;
+  bottom: -25px;
+}
+
+.nav-pills .nav-link {
+  border-radius: 0;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 19px;
+  color: #000000;
+  padding: 0;
+}
+
+.nav-pills .nav-link.active,
+.nav-pills .show>.nav-link {
+  background-color: transparent;
+  border-radius: 0;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 19px;
+  color: #000000;
+  border-bottom: 2px solid #1192EE;
+  padding: 0;
+}
+
+.nav-pills {
+  border-bottom: 2px solid rgba(0, 0, 0, 0.08);
+  display: flex;
+  justify-content: space-between;
+}
+
+.tab-pane {
+  padding-left: 0;
+}
+
+.tab-pane h3 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 21px;
+  color: #000000;
+}
+
+.tab-pane p {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.03em;
+  color: #000000;
+}
+
+.btnstyle-2 {
+  height: 39px;
+  border: 1px solid #1192EE;
+  border-radius: 5px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 21px;
+  letter-spacing: 0.03em;
+  color: #1192EE;
+  background-color: transparent;
+}
+
+@media only screen and (max-width: 992px) {
+  .nav-pills {
+    justify-content: space-around;
+  }
+
+  .nav-pills .nav-link {
+    margin-top: 15px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .services-image-2 {
+    display: none;
+  }
+
+  .services-image-1 {
+    text-align: center;
+  }
+
+  .services-tabs {
+    margin-top: 50px;
+  }
+
+  .s-mrt-80 {
+    margin-top: 30px;
+  }
+
+  .nav-pills {
+    justify-content: space-around;
+  }
+
+  .nav-pills .nav-link {
+    margin-top: 15px;
+  }
+
+  #services {
+    padding-bottom: 65px;
+  }
+}
 
 /*-----------------------------------------
-6. Info
+6. Specialize
 -------------------------------------------*/
+#specialize {
+  padding-top: 160px;
+  padding-bottom: 160px;
+}
 
+.specialize-boxs {
+  position: relative;
+}
 
+.medium-cir {
+  position: absolute;
+  top: -25%;
+  left: 35%;
+  background: rgba(65, 187, 255, 0.76);
+  width: 230px;
+  height: 230px;
+  border-radius: 50%;
+  z-index: 2;
+}
+
+.smoll-cir {
+  position: absolute;
+  top: 10%;
+  left: 80%;
+  background: #1192EE;
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+.big-cir {
+  position: relative;
+  top: 90px;
+  left: 50%;
+  background: #1192EE;
+  width: 277px;
+  height: 277px;
+  border-radius: 50%;
+}
+
+.cir {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+  flex-direction: column;
+}
+
+.cir p {
+  margin-bottom: 0 !important;
+}
+
+.cir-count {
+  text-align: center;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 55.7747px;
+  line-height: 74px;
+  letter-spacing: 0.02em;
+  color: #FFFFFF;
+}
+
+.cir-text {
+  text-align: center;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 25.0986px;
+  line-height: 33px;
+  letter-spacing: 0.055em;
+  color: #FFFDFD;
+}
+
+@media only screen and (max-width: 992px) {
+  .big-cir {
+    top: 70px;
+    left: 50px;
+  }
+
+  .medium-cir {
+    top: -25%;
+    left: -5%;
+  }
+
+  .smoll-cir {
+    top: 10%;
+    left: 55%;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .big-cir {
+    top: 100px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .medium-cir {
+    top: -15%;
+    left: 20%;
+  }
+
+  .smoll-cir {
+    top: 10%;
+    left: 55%;
+  }
+
+  .specialize-text {
+    margin-bottom: 85px;
+  }
+
+  #specialize {
+    text-align: center;
+    padding-top: 60px;
+    padding-bottom: 160px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .medium-cir {
+    left: 5%;
+    width: 180px;
+    height: 180px;
+  }
+
+  .smoll-cir {
+    top: 30%;
+    left: 65%;
+    width: 110px;
+    height: 110px;
+  }
+
+  .cir-count {
+    font-size: 40px;
+    line-height: 50px;
+  }
+
+  .cir-text {
+    font-size: 20px;
+  }
+}
 
 /*-----------------------------------------
 7. Feedback
 -------------------------------------------*/
+#feedback {
+  padding: 100px 0;
+  background: #F9F9F9;
+}
 
+.feedback-title {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 48px;
+  text-align: center;
+  letter-spacing: 0.05em;
+  color: #000000;
+}
 
+.text-cent {
+  text-align: center;
+}
+
+.rev-item img {
+  width: auto !important;
+  display: initial !important;
+}
+
+.op {
+  opacity: 0.5;
+}
+
+.rev-item {
+  padding: 65px 65px;
+  width: 90%;
+  background-color: #fff;
+  box-shadow: -8px -8px 16px rgba(228, 228, 228, 0.52), 8px 8px 16px rgba(176, 171, 171, 0.45);
+  border-radius: 5px;
+  margin-top: 45px;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-bottom: 45px;
+}
+
+.cl.rev-item {
+  position: absolute;
+  margin-top: 0;
+  width: 60%;
+  height: 60%;
+  margin-bottom: 0;
+  padding: 0 35px;
+  background-color: #fff !important;
+  opacity: 1;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+}
+
+.hed-rev {
+  display: flex;
+}
+
+.feed-stars {
+  margin-left: 15px;
+}
+
+.author {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 11.9821px;
+  line-height: 18px;
+  letter-spacing: 0.055em;
+  color: #000000;
+  margin-top: 5px;
+}
+
+.author span {
+  font-weight: 900;
+}
+
+.rev-name {
+  margin-top: 15px;
+  margin-top: 40px;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 14px;
+  line-height: 21px;
+  letter-spacing: 0.055em;
+  color: #000000;
+  text-align: right;
+}
+
+.rev-info {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+  letter-spacing: 0.055em;
+  color: rgba(0, 0, 0, 0.5);
+  padding-bottom: 50px;
+}
+
+.owl-theme .owl-dots .owl-dot.active span,
+.owl-theme .owl-dots .owl-dot:hover span {
+  background: #FFFFFF;
+  border: 1px solid #1192EE;
+  transform: scale(1.8);
+}
+
+.owl-carousel {
+  display: block;
+}
+
+.owl-nav {
+  display: none;
+}
+
+.owl-carousel .owl-dots.disabled {
+  display: block;
+}
+
+.owl-theme .owl-dots .owl-dot span {
+  background: rgba(17, 146, 238, 0.3);
+}
+
+@media only screen and (max-width: 767px) {
+  .cl.rev-item {
+    width: 100%;
+    height: 100%;
+  }
+
+  .rev-item {
+    padding: 0px;
+    width: 100%;
+  }
+}
 
 /*-----------------------------------------
 8. Newsletter
 -------------------------------------------*/
+#news {
+  padding: 75px 0;
+  background: linear-gradient(101.24deg, rgba(29, 42, 55, 0.94) 1.5%, rgba(29, 42, 55, 0.86) 99.75%), url('../img/content/newsletter.png');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
+.news-title {
+  text-align: center;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 45px;
+  letter-spacing: 0.025em;
+  color: #FFFFFF;
+}
+
+.news-form {
+  margin-top: 70px;
+}
+
+.news-btn-send {
+  margin-right: 20px;
+}
+
+.news-input {
+  color: #fff !important;
+  height: 56px;
+  background-color: transparent;
+  border: 2px solid rgba(255, 255, 255, 0.3);
+  border-right: 0;
+}
+
+.news-input:focus {
+  color: #fff !important;
+  border: 2px solid rgba(255, 255, 255, 0.3);
+  border-right: 0;
+  background-color: transparent !important;
+}
+
+.send-req {
+  width: 217px;
+  height: 56px;
+  border-radius: 0px 3px 3px 0px;
+}
+
+@media screen and (max-width: 768px) {
+  .send-req span {
+    display: none;
+  }
+
+  .send-req {
+    width: 60px;
+  }
+
+  .news-btn-send {
+    margin-right: 0px;
+  }
+}
 
 /*-----------------------------------------
 9. Footer
