--- a/css/services-2.css
+++ b/css/services-2.css
@@ -16,7 +16,7 @@ TABLE OF CONTENT
 4. Services
 5. Portfolio
 6. About
-7. Newlester
+7. Contact
 8. Footer
 ==============================================
 [END] TABLE OF CONTENT
@@ -83,7 +83,9 @@ TABLE OF CONTENT
   letter-spacing: 0.055em;
   color: rgba(0, 0, 0, 0.5)
 }
-
+.fs-16 {
+  font-size: 16px;
+}
 .btnstyle {
   color: #fff;
   border-radius: 5px;
@@ -307,25 +309,454 @@ nav {
 /*-----------------------------------------
 4. Services
 -------------------------------------------*/
+#services {
+  background: url("../img/content/overlay-sercies.png");
+  background-position: left center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  padding: 100px 0;
+}
+.services-item {
+  padding: 50px 55px;
+  height: 375px;
+  background: #FFFFFF;
+  box-shadow: -4px -4px 10px rgba(218, 213, 213, 0.23);
+  border-radius: 5px;
+}
 
+.services-item h2 {
+  margin-top: 30px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 24px;
+  letter-spacing: 0.05em;
+  color: #000000;
+}
 
+.services-item p {
+  margin-top: 30px;
+  margin-bottom: 30px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  letter-spacing: 0.05em;
+  color: #8A97A5;
+}
+
+.services-item a {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 24px;
+  text-align: center;
+  letter-spacing: 0.05em;
+  color: #1192EE;
+}
+
+.cheked-item {
+  background: #1192EE;
+  box-shadow: -4px -4px 10px rgba(218, 213, 213, 0.23);
+  border-radius: 5px;
+}
+
+.cheked-item h2, .cheked-item a, .cheked-item p {
+  color: #FFFFFF;
+}
+.title-box{
+  text-align: center;
+  margin-bottom: 50px;
+}
+@media only screen and (max-width: 992px) {
+  .services-box {
+    margin-bottom: 0px;
+  }
+}
 
 /*-----------------------------------------
 5. Portfolio
 -------------------------------------------*/
+#portfolio {
+  padding: 100px 0;
+}
+
+.acvtive-link {
+  font-style: normal;
+  font-weight: 900;
+  font-size: 14px;
+  line-height: 19px;
+  letter-spacing: 0.05em;
+  color: #ffffff !important;
+  background: #1192EE;
+  border-radius: 5px;
+}
+
+.port-link {
+  font-style: normal;
+  font-weight: 900;
+  font-size: 14px;
+  line-height: 19px;
+  letter-spacing: 0.05em;
+  color: rgba(0, 0, 0, 0.5);
+  transition: all 1.5s;
+  text-transform: uppercase;
+}
+
+.port-link:hover {
+  color: #000000;
+  transition: all 1.5s;
+}
+
+#customersCats {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  float: right;
+}
+
+.port-ite {
+  height: 280px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: 0px;
+  padding-right: 0 !important;
+  padding-left: 0 !important;
+}
+
+.port-ite:hover .overlay-portfolio {
+  opacity: 1;
+  transition: all 1s;
+}
+
+.overlay-portfolio {
+  background: rgba(17, 146, 238, 0.7);
+  height: 280px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  opacity: 0;
+  transition: all 1s;
+}
+
+.overlay-portfolio a {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 26px;
+  letter-spacing: 0.055em;
+  color: #FFFFFF;
+  position: relative;
+}
+
+.overlay-portfolio a:before {
+  border-bottom: 3px solid #fff;
+  width: 40%;
+  content: '';
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.tabs-boxs {
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+
+.port-viwe{
+  display: flex;
+  justify-content:flex-end;
+  align-items: flex-end;
+}
+.port-viwe button{
+    margin-left: 0;
+}
+@media only screen and (max-width: 767px) {
+  #customersCats {
+    float: none;
+    justify-content: center;
+  }
+
+  .port-viwe {
+    margin-top: 0px;
+    margin-bottom: 20px;
+    text-align: center;
+  }
+}
 
 
 
 /*-----------------------------------------
 6. About
 -------------------------------------------*/
+#innovative {
+  width: 100%;
+  padding-top: 80px;
+  padding-bottom: 150px;
+  background: url('../img/content/innovative-bg.svg');
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  transform: rotate(180deg);
+}
+
+#innovative .container {
+  transform: rotate(-180deg);
+}
+
+.innovative-title {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  letter-spacing: 0.025em;
+}
+
+.innvlist li {
+  margin-bottom: 10px;
+  text-align: right;
+}
+
+.innvlist li i {
+  margin-right: 20px;
+}
+
+.bg-big {
+  position: relative;
+  top: 50%;
+  left: 35%;
+  transform: translate(-50%, -50%);
+  width: 500px;
+  height: 500px;
+  background: #E7F4FD;
+  border-radius: 50%;
+}
+
+.bg-big img {
+  position: absolute;
+  bottom: 5%;
+  right: 10%;
+  transform: rotate(180deg);
+}
+
+.bg-medium {
+  position: absolute;
+  top: 50%;
+  left: 35%;
+  transform: translate(-50%, -50%);
+  width: 335px;
+  height: 335px;
+  background: #A7D6F8;
+  border-radius: 50%;
+}
+
+.bg-medium img {
+  position: absolute;
+  top: 40%;
+  left: -10%;
+  transform: rotate(180deg);
+}
+
+.bg-smoll {
+  position: absolute;
+  top: 50%;
+  left: 35%;
+  transform: translate(-50%, -50%);
+  width: 154px;
+  height: 154px;
+  background: #128FE9;
+  border-radius: 50%;
+}
+
+.bg-smoll img {
+  position: absolute;
+  right: -50%;
+  top: -50%;
+  transform: rotate(180deg);
+}
+
+@media screen and (max-width: 1300px) {
+  .bg-big, .bg-medium, .bg-smoll {
+    left: 50%;
+  }
+}
+
+@media screen and (max-width: 1065px) {
+  .demobtn-outline {
+    margin-left: 0px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  #innovative {
+    padding-bottom: 15px;
+  }
+
+  .innvlist li {
+    text-align: left;
+  }
+
+  .innovative-title {
+    margin-top: 30px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #innovative {
+    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+
+  .bg-big {
+    width: 450px;
+    height: 450px;
+  }
+
+  .bg-medium {
+    width: 320px;
+    height: 320px;
+  }
+
+  .bg-smoll {
+    width: 154px;
+    height: 154px;
+  }
+
+  .bg-medium img {
+    position: absolute;
+    top: 70%;
+    left: 10%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  #innovative {
+    text-align: center;
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+
+  .bg-big {
+    width: 350px;
+    height: 350px;
+  }
+
+  .bg-medium {
+    width: 220px;
+    height: 220px;
+  }
+
+  .bg-smoll {
+    width: 54px;
+    height: 54px;
+  }
+
+  .bg-medium img {
+    position: absolute;
+    top: 70%;
+    left: 10%;
+    width: 25%;
+  }
+
+  .bg-big img {
+    width: 15%;
+  }
+
+  .bg-smoll img {
+    position: absolute;
+    right: -200%;
+    top: 5%;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .bg-big {
+    width: 300px;
+    height: 300px;
+  }
+
+  .bg-medium {
+    width: 170px;
+    height: 170px;
+  }
+
+  .bg-smoll {
+    width: 54px;
+    height: 54px;
+  }
+
+  .bg-medium img {
+    position: absolute;
+    top: 70%;
+    left: 10%;
+  }
+
+  .bg-smoll img {
+    right: -130%;
+    top: -35%;
+    width: 75%;
+  }
+}
 
 
 
 /*-----------------------------------------
-7. Newlester
+7. Contact
 -------------------------------------------*/
+#contact {
+  padding: 140px 0 60px 0;
+  background: url("../img/content/h-5-contact-layer.png");
+  background-position: top;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 
+.contact-title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 32px;
+  letter-spacing: 0.03em;
+  color: #FFFFFF;
+  text-align: right;
+}
+
+.contact-info {
+  margin-top: 30px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 24px;
+  text-align: right;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.64);
+}
+
+.contact-btn {
+  float: right;
+  margin-top: 50px;
+}
+
+.h-5-btn-2 {
+  padding: 17px 44px;
+  border: 2px solid #FFFFFF;
+  border-radius: 30px;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 14px;
+  line-height: 19px;
+  letter-spacing: 0.05em;
+  color: #FFFFFF;
+  transition: all 0.3s;
+}
+.h-5-btn-2:hover{
+  color: #2E3538;
+  border: 2px solid #2E3538;
+  transition: all 0.3s;
+}
 /*-----------------------------------------
 8. Footer
 -------------------------------------------*/
