--- a/css/blog-2.css
+++ b/css/blog-2.css
@@ -479,6 +479,113 @@ input.form-control {
     border-radius: 10px;
     border: 0;
 }
+.blog-nav{
+   justify-content: center;
+   margin-bottom: 50px;
+}
+.acvtive-link {
+  font-style: normal;
+  font-weight: 900;
+  font-size: 14px;
+  line-height: 19px;
+  letter-spacing: 0.05em;
+  border-radius: 5px;
+}
+
+.port-link {
+  font-style: normal;
+  font-weight: 900;
+  font-size: 14px;
+  line-height: 19px;
+  letter-spacing: 0.05em;
+  color: rgba(0, 0, 0, 0.5);
+  transition: all 1.5s;
+  text-transform: uppercase;
+}
+
+.port-link.active {
+  color: #FFFFFF;
+  background: #1192EE;
+border-radius: 5px
+}
+
+.port-link:hover {
+  color: #000000;
+  transition: all 1.5s;
+}
+/*post item*/
+.fs-16{
+  font-size: 16px;
+}
+.fs-18{
+  font-size: 18px;
+}
+.blue{
+  color: #1192EE;
+}
+.post-bold{
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.post-data{
+  width: 70%;
+  margin-top: 80px;
+  padding-bottom: 40px;
+  border-bottom: 0.5px solid rgba(0, 0, 0, 0.2);
+}
+.comment{
+  margin-top: 20px;
+  margin-bottom: 100px;
+  width: 70%;
+  display: flex;
+  flex-direction: row;
+}
+.com-img{
+  width: 20%;
+}
+.com-content{
+  padding-left: 15px;
+  width: 80%;
+}
+.com-content h3{
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 27px;
+  letter-spacing: 0.05em;
+  color: #1192EE;
+}
+.com-content span{
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+  letter-spacing: 0.05em;
+  color: #8A97A5;
+}
+.com-content p{
+  font-style: italic;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 21px;
+  letter-spacing: 0.05em;
+  color: #8A97A5;
+}
+.related{
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 32px;
+  letter-spacing: 0.05em;
+  color: #1192EE;
+  margin-bottom: 50px;
+}
+.reated-item{
+  margin-bottom: 50px;
+}
+.mr{
+  margin: 0;
+}
 @media screen and (max-width: 768px) {
   .post-btn{
       margin-left: 0;
@@ -496,6 +603,7 @@ input.form-control {
   background-size: cover;
   background-repeat: no-repeat;
 }
+
 
 .contact-title {
   font-style: normal;
