--- a/css/contact.css
+++ b/css/contact.css
@@ -501,7 +501,11 @@ nav {
 .sendbtn:hover {
   color: #fff;
 }
-
+#map{
+  border: 0px;
+  width: 100%;
+  height :100%;
+}
 /*-----------------------------------------
 7. Newsletter
 -------------------------------------------*/
